# homelab

./: .gitignore  GCP.md  Kubeadm.md  README.md  ansible.cfg  inventory.yml  pyproject.toml  site.yml
applications/vaultwarden/: README.md
archive/terraform-aws-ec2-vaultwarden/: README.md  main.tf  site.yaml
playbooks/: vaultwarden.yml
terraform/: .terraform.lock.hcl  dns.tf  helm.tf  kubernetes.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform-aws-ec2-vaultwarden/: inventory.yaml  providers.tf
terraform-aws-eks-vaultwarden/: README.md  terragrunt.hcl  values-eks.yaml
terraform-aws-eks-vaultwarden/test/: vars.hcl
terraform-modules/: README.md
terraform-modules/compute/: instancegroups.tf  main.tf  outputs.tf  servicedirectory.tf  variables.tf
terraform-modules/database/: main.tf  variables.tf
terraform-modules/firewall/: main.tf
terraform-modules/loadbalancer/: main.tf  ssl.tf  subnet.tf  variables.tf
terraform-modules/network/: main.tf  outputs.tf  variables.tf
terraform/common-gcp/: .terraform.lock.hcl  egress.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/devops-lab/: .terraform.lock.hcl  dns.tf  firewall.tf  main.tf  outputs.tf  providers.tf  storage.tf  variables.tf
terraform/google-cloud/: .terraform.lock.hcl  kubernetes.tf  main.tf  outputs.tf  prometheus-grafana.tf  variables.tf
terraform/vaultwarden-gke/: .terraform.lock.hcl  database.tf  dns.tf  kubernetes.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/vmware-lab/: .terraform.lock.hcl  main.tf  providers.tf  (+1 more)
workloads/: inventory
(+53 files in other folders)
